--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,45 +1,25 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Thiago Pereira">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+
+		<h1>Thiago Pereira <br/><span class="text-gradient">Front-end Enginner</span></h1>
+		<p>He / him</p>
+		<p class="about">
+			Passionate about car racing, and a good weissbier 🍺 ! 
+			<br/>
+			Gamer in free time and react and rust enthusiast. 
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
 	</main>
 </Layout>
 
 <style>
 	main {
 		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
+		padding: 2rem;
+		max-width: 80ch;
 	}
 	h1 {
 		font-size: 3rem;
@@ -53,15 +33,15 @@ import Card from '../components/Card.astro';
 		background-size: 400%;
 		background-position: 0%;
 	}
-	.instructions {
+	.about {
 		line-height: 1.6;
-		margin: 1rem 0;
+		margin: 2rem 0;
 		border: 1px solid rgba(var(--accent), 25%);
 		background-color: white;
-		padding: 1rem;
+		padding: 2rem;
 		border-radius: 0.4rem;
 	}
-	.instructions code {
+	.about code {
 		font-size: 0.875em;
 		font-weight: bold;
 		background: rgba(var(--accent), 12%);
@@ -69,7 +49,7 @@ import Card from '../components/Card.astro';
 		border-radius: 4px;
 		padding: 0.3em 0.45em;
 	}
-	.instructions strong {
+	.about strong {
 		color: rgb(var(--accent));
 	}
 	.link-card-grid {
