--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Thiago Pereira">
 	<main>
-
 		<h1>Thiago Pereira <br/><span class="text-gradient">Front-end Enginner</span></h1>
+		<img src='src/assets/thiago.webp' alt='thiago'/>
 		<p>He / him</p>
 		<p class="about">
 			Passionate about car racing, and a good weissbier 🍺 ! 
@@ -25,6 +25,17 @@ import Layout from '../layouts/Layout.astro';
 		font-size: 3rem;
 		font-weight: 800;
 		margin: 0;
+		color: white;
+	}
+	img {
+		border-radius: 10%;
+		width: 200px;
+		height: 200px;
+	}
+	p{
+		color: black;
+		font-size: large;
+		font-weight: bold;
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
@@ -37,7 +48,7 @@ import Layout from '../layouts/Layout.astro';
 		line-height: 1.6;
 		margin: 2rem 0;
 		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
+		background-color: rgb(214 243 31 / 90%);
 		padding: 2rem;
 		border-radius: 0.4rem;
 	}
