made some layout adjust

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const currentYear = new Date().getFullYear();
 
 <footer>
 	&copy; {currentYear} Thiago Pereira
-	<small class="byline">Stack of this project: Astro / CSS </small>
+	<small class="byline">Made just with:  Astro | CSS </small>
 </footer>
 <style>
 	footer {
@@ -13,12 +13,12 @@ const currentYear = new Date().getFullYear();
 		padding-right: 2rem;
 		padding-bottom: 4rem;
 		padding-left: 2rem;
+		color: antiquewhite;
 	}
 	.byline {
 		display: block;
 		margin-top: 1rem;
 		color: var(--t-subdue);
 		font-size: var(--f-d2);
-		text-transform: uppercase;
 	}
 </style>
