--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)),  blue 40%, white 50%);
+		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)),  rgb(32, 9, 126) 40%, white 30%);
 	}
 	html {
 		font-family: system-ui, sans-serif;
