--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,6 @@
----
-const currentYear = new Date().getFullYear();
----
 
 <footer>
-	&copy; {currentYear} Thiago Pereira
+	&copy; 2023 Thiago Pereira
 	<small class="byline">Made just with:  Astro | CSS </small>
 </footer>
 <style>
