test deploy gh-pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,9 @@
+---
+const currentYear = new Date().getFullYear();
+---
 
 <footer>
-	&copy; 2023 Thiago Pereira
+	&copy; {currentYear} Thiago Pereira
 	<small class="byline">Made just with:  Astro | CSS </small>
 </footer>
 <style>
