--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const currentYear = new Date().getFullYear();
 
 <footer>
 	&copy; {currentYear} Thiago Pereira
-	<small class="byline">Made just with:  Astro | CSS </small>
+	<small class="byline">Technologies used here it was Astro</small>
 </footer>
 <style>
 	footer {
