--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,11 +28,15 @@ const { title } = Astro.props;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)),  rgb(32, 9, 126) 40%, white 30%);
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: Liberation Mono, sans-serif;
 		background-color: #131212f3;
 	}
 	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		font-family: Liberation Mono, sans-serif;
+	}
+	body {
+    margin: auto;
+    max-width: 100ch;
+		padding: 1rem;
 	}
 </style>
