--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,22 +3,25 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer>
-	&copy; {currentYear} Thiago Pereira
-	<small class="byline">Technologies used here it was Astro</small>
+  &copy; {currentYear}
+  <strong>Thiago Pereira</strong>
+  <small class="byline">Technologies used here it was Astro</small>
 </footer>
 <style>
-	footer {
-		text-align: center;
-		padding-top: 8rem;
-		padding-right: 2rem;
-		padding-bottom: 4rem;
-		padding-left: 2rem;
-		color: antiquewhite;
-	}
-	.byline {
-		display: block;
-		margin-top: 1rem;
-		color: var(--t-subdue);
-		font-size: var(--f-d2);
-	}
+  footer {
+    text-align: center;
+    padding-top: 8rem;
+    padding-right: 2rem;
+    padding-bottom: 4rem;
+    padding-left: 2rem;
+    color: antiquewhite;
+    font-family: Montserrat;
+  }
+  .byline {
+    display: block;
+    margin-top: 1rem;
+    color: var(--t-subdue);
+    font-size: var(--f-d2);
+    font-family: Montserrat;
+  }
 </style>
