--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,35 +8,98 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-		<meta name="description" content="Thiago Pereira's Web Site">
-		<meta name="keywords" content="Software Development, CSS, JavaScript, Typescript, React, React Native">
-		<meta name="author" content="Thiago Pereira">
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta name="description" content="Thiago Pereira's Web Site" />
+    <meta
+      name="keywords"
+      content="Software Development, CSS, JavaScript, Typescript, React, React Native"
+    />
+    <meta name="author" content="Thiago Pereira" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title></head
+  >
+
+  <body>
+    <slot />
+    <style is:global>
+      :root {
+        /* Colors */
+        --c-black: #05091e;
+        --c-white: #fff;
+
+        /* Fonts */
+        --f-u18: 11.390625em;
+        --f-u17: 9.950627481136905em;
+        --f-u16: 8.692673779389363em;
+        --f-u15: 7.59375em;
+        --f-u14: 6.63375165409127em;
+        --f-u13: 5.795115852926242em;
+        --f-u12: 5.0625em;
+        --f-u11: 4.422501102727513em;
+        --f-u10: 3.8634105686174953em;
+        --f-u9: 3.375em;
+        --f-u8: 2.9483340684850083em;
+        --f-u7: 2.575607045744997em;
+        --f-u6: 2.25em;
+        --f-u5: 1.9655560456566725em;
+        --f-u4: 1.7170713638299977em;
+        --f-u3: 1.5em;
+        --f-u2: 1.3103706971044482em;
+        --f-u1: 1.1447142425533319em;
+        --f-d1: 0.8735804647362989em;
+        --f-d2: 0.7631428283688879em;
+        --f-d3: 0.6666666666666666em;
+        --f-d4: 0.5823869764908659em;
+        --f-d5: 0.5087618855792586em;
+        --f-d6: 0.4444444444444444em;
+        --f-d7: 0.3882579843272439em;
+        --f-d8: 0.3391745903861724em;
+        --f-d9: 0.2962962962962963em;
+        --f-d10: 0.2588386562181626em;
+        --f-d11: 0.22611639359078162em;
+        --f-d12: 0.19753086419753085em;
+        --f-d13: 0.17255910414544176em;
+        --f-d14: 0.15074426239385438em;
+        --f-d15: 0.13168724279835392em;
+        --f-d16: 0.11503940276362785em;
+        --f-d17: 0.10049617492923625em;
+        --f-d18: 0.0877914951989026em;
+
+        --t-fg: var(--c-black);
+        --t-bg: var(--c-white);
+        --t-subdue: var(--c-gray);
+        --t-active: var(--c-blue);
+        --accent: 124, 58, 237;
+        --accent-gradient: linear-gradient(
+          45deg,
+          rgb(var(--accent)),
+          rgb(32, 9, 126) 40%,
+          white 30%
+        );
+      }
+      html {
+        font-family: Playfair Display, Montserrat, system-ui, sans-serif;
+        background-color: #131212f3;
+      }
+      body {
+        margin: auto;
+        max-width: 100ch;
+        padding: 1rem;
+      }
+    </style>
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)),  rgb(32, 9, 126) 40%, white 30%);
-	}
-	html {
-		font-family: Liberation Mono, sans-serif;
-		background-color: #131212f3;
-	}
-	code {
-		font-family: Liberation Mono, sans-serif;
-	}
-	body {
-    margin: auto;
-    max-width: 100ch;
-		padding: 1rem;
-	}
-</style>
