--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 <nav>
-  <a class="link" href="http://thiago-pereira.dev">
+  <a class="link" href="http://thiago-pereira.dev" aria-label="Home">
     <div class="monogram">
       <picture>
         <img
@@ -12,7 +12,12 @@
     </div>
 
     <div class="socials">
-      <a href="https://www.linkedin.com/in/thiago-pereira-aa9a3817/">
+      <a
+        href="https://www.linkedin.com/in/thiago-pereira-aa9a3817/"
+        target="blank"
+        rel="noopener noreferrer"
+        aria-label="Linkedin profile"
+      >
         <svg
           class="socialIcon"
           enable-background="new 0 0 32 32"
@@ -54,6 +59,7 @@
         href="https://github.com/pereirathi"
         target="blank"
         rel="noopener noreferrer"
+        aria-label="Gihub profile"
       >
         <svg
           class="socialIcon"
@@ -94,7 +100,12 @@
           ></svg
         >
       </a>
-      <a href="mailto:tp@thiago-pereira.dev">
+      <a
+        href="mailto:tp@thiago-pereira.dev"
+        target="blank"
+        rel="noopener noreferrer"
+        aria-label="Email"
+      >
         <svg
           class="socialIcon"
           enable-background="new 0 0 32 32"
