--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import GoogleAnalytics from '../components/GoogleAnalytics.astro';
 export interface Props {
   title: string;
 }
@@ -9,6 +10,8 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <GoogleAnalytics />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -70,13 +73,13 @@ const { title } = Astro.props;
       }
 
       h1 {
-      color: var(--c-white); 
-      font-size: var(--f-u7);
-      font-weight: 800;
-      text-align: center;
-      margin: 0.5rem;
-      font-family: Playfair Display;
-    }
+        color: var(--c-white); 
+        font-size: var(--f-u7);
+        font-weight: 800;
+        text-align: center;
+        margin: 0.5rem;
+        font-family: Playfair Display;
+      }
 
       h2 {
         color: var(--c-white); 
@@ -88,13 +91,13 @@ const { title } = Astro.props;
       }
 
       h3 {
-      color: var(--c-white);  
-      font-size: var(--f-u3);
-      font-weight: 800;
-      text-align: center;
-      margin-top: 0;
-      font-family: Playfair Display;
-    }
+        color: var(--c-white);  
+        font-size: var(--f-u3);
+        font-weight: 800;
+        text-align: center;
+        margin-top: 0;
+        font-family: Playfair Display;
+     }
     
     </style>
   </body>
