--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import Footer from "../components/Footer.astro";
       <Card 
       isGreen={false}
       isAboutMe={false}
-      title="Articles" 
+      title="Last Articles" 
       />
 
       <div class="projects">
@@ -63,7 +63,7 @@ import Footer from "../components/Footer.astro";
               loading="lazy"
             />
           </picture>
-
+          <p>2.75 millions  monthly customers</p>
           <picture>
             <img
               src="/assets/zecourirer.webp"
@@ -72,6 +72,7 @@ import Footer from "../components/Footer.astro";
               loading="lazy"
             />
           </picture>
+          <p>+60 thousand monthly couriers</p>
         </div>
       </div>
     </div>
@@ -90,7 +91,7 @@ import Footer from "../components/Footer.astro";
     width: 120px;
     border-radius: 5px;
     object-fit: cover;
-    margin: 0rem 2rem;
+    margin: 0rem 0.6rem;
   }
   header {
     display: flex;
@@ -172,7 +173,10 @@ import Footer from "../components/Footer.astro";
     flex-direction: row;
     justify-content: center;
   }
-  .projects p {
-    color: var(--c-white)
+  .screens-projects p {
+    color: var(--c-white);
+    font-size: 0.75em;
+    margin-top: 2rem;
+    margin-bottom: 0;
   }
 </style>
