changed the footer text

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ const currentYear = new Date().getFullYear();
 
 <footer>
   &copy; {currentYear}
-  <strong>Thiago Pereira</strong>
-  <small class="byline">Technologies used here it was Astro</small>
+  <strong> Thiago Pereira </strong>
+  <small class="byline">Built with Astro</small>
 </footer>
 <style>
   footer {
