fixed font pre-load

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,12 +18,14 @@ const { title } = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap"
-      rel="stylesheet"
+      as="style"
     />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@500;700&display=swap"
-      rel="stylesheet"
+      as="style"
     />
 
     <meta name="description" content="Thiago Pereira's Web Site" />
