--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,14 +1,7 @@
 <nav>
   <a class="link" href="http://thiago-pereira.dev" aria-label="Home">
     <div class="monogram">
-      <picture>
-        <img
-          src="/assets/thiago2.webp"
-          alt="thiago"
-          decoding="async"
-          loading="lazy"
-        />
-      </picture>
+      T
     </div>
 
     <div class="socials">
@@ -101,7 +94,7 @@
         >
       </a>
       <a
-        href="mailto:tp@thiago-pereira.dev"
+        href="mailto:pereirathi886@gmail.com"
         target="blank"
         rel="noopener noreferrer"
         aria-label="Email"
