--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
 import Nav from "../components/Nav.astro";
-import Layout from "../layouts/Layout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Thiago Pereira">
+<MainLayout title="Thiago Pereira">
   <Nav />
     <section class="container" aria-label="About Me">
-
         <span>Hi,</span>
         <object
           data="/assets/wave_hand.svg"
@@ -15,7 +14,6 @@ import Footer from "../components/Footer.astro";
           name="waveHand"
           aria-label="Hi">
         </object>
-
 
       <div class="details" aria-label="Details">
         <img
@@ -30,24 +28,25 @@ import Footer from "../components/Footer.astro";
         <h1>
           I'm Thiago Pereira
         </h1>
-        <h2>Senior Front-end Enginner</h2>
+        <h2>Senior Front-end Enginner,</h2>
+        <h2>based in Lisbon.</h2>
         </div>
         </div>
-        <p>
-          I started my career in 2018 as a Front-end Developer coming from the Telecom area where my last position was in one of the largest 
-          beverage delivery applications in Brazil which was an innovation arm of the largest Brazilian brewery (Amvev). 
-          In my career, I have worked in several cross-functional teams with Agile methodologies where my main activities were monitoring, 
-          maintenance, and technical refinement for other developers. I also like to share my knowledge with the team by creating good documentation 
-          and I am very motivated by innovation and sustainability. 
-        </p>
-
     </div>
 
   <main class="wrapper">
-    <div class="grid">
 
+    <div class="grid">
+      <h3>About Me</h3>
+      <p>
+        I started my career in 2018 as a Front-end Developer coming from the Telecom area where my last position was in one of the largest 
+        beverage delivery applications in Brazil which was an innovation arm of the largest Brazilian brewery (AmBev). 
+        In my career, I have worked in several cross-functional teams with Agile methodologies where my main activities were monitoring, 
+        maintenance, and technical refinement for other developers. I also like to share my knowledge with the team by creating good documentation 
+        and I am very motivated by innovation and sustainability. 
+      </p>
       <div class="projects">
-        <h3>Projects</h3>
+        <h3>Mobile Projects</h3>
         <div class="screens-projects">
           <picture>
             <img
@@ -57,7 +56,7 @@ import Footer from "../components/Footer.astro";
               loading="lazy"
             />
           </picture>
-          <p>2.75 millions  monthly customers</p>
+          <p>+3 millions  monthly customers</p>
           <picture>
             <img
               src="/assets/zecourirer.webp"
@@ -72,10 +71,11 @@ import Footer from "../components/Footer.astro";
     </div>
     <Footer />
   </main>
-</Layout>
+</MainLayout>
 
 <style>
   .container {
+    margin: 1rem 0;
     span {
       color: var(--c-white);
       font-size: var(--f-u3);
@@ -84,7 +84,6 @@ import Footer from "../components/Footer.astro";
       margin:0;
     }
   }
-
   .details{
     display: flex;
     flex-wrap: wrap;
@@ -102,32 +101,32 @@ import Footer from "../components/Footer.astro";
     }
   }
 
-    h1 {
-        color: var(--c-lgray); 
-        font-size: var(--f-u6);
-        font-weight: 900;
-        text-align: left;
-        line-height: 80px;
-        margin:0;
-      }
-
-    h2 {
-        color: var(--c-white); 
-        font-size: var(--f-u3);
-        font-weight: 500;
-        text-align: left;
-        margin:0;
-      }
-
-
-  header {
-    display: flex;
-    flex-direction: row;
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-    justify-content: center;
-    width: 100%;
+  h1 {
+    color: var(--c-lgray); 
+    font-size: var(--f-u6);
+    font-weight: 900;
+    text-align: left;
+    line-height: 80px;
+    margin:0;
   }
+
+  h2 {
+    color: var(--c-white); 
+    font-size: var(--f-u3);
+    font-weight: 500;
+    text-align: left;
+    padding: 0.2rem 0;
+    margin:0;
+  }
+
+  h3 {
+    color: var(--c-white); 
+    font-size: var(--f-u3);
+    font-weight: 500;
+    text-align: left;
+    margin: 1.5rem 0;
+  }
+
 
   span {
     color: var(--c-white);
@@ -137,70 +136,39 @@ import Footer from "../components/Footer.astro";
     font-size: 1.25rem;
     line-height: 1.6;
     padding: 1rem 0.5rem;
-    height: 28ch;
+    height: 24ch;
   }
-
-
-  @media (min-width: 900px) {
+  @media (max-width: 600px) {
     .grid {
       grid-template-columns: 1fr 1fr;
     }
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 350%;
-    background-position: 0%;
-  }
-  .skills {
-    line-height: 1.6;
-    padding: 1rem 0.5rem;
-    height: 28ch;
-    border-radius: 0.5rem;
-    font-size: large;
-  }
-  .skills > div {
-    margin-top: 0.33rem;
-    margin-bottom: .66rem;
-    border-bottom: 1px solid var(--c-white)
-  }
-  .lineReact {
-    width: 95%;
-  }
-  .lineReactNative {
-    width: 90%;
+    .details{
+      img {
+        border-radius: 100vmax;
+        height: 370px;
+        width: min(250px, 100%);
+        box-shadow: 0 0 0 0.2px var(--c-black);
+        object-fit: cover;
+        object-position: center;
+        margin: auto;
+      }
+    }
+  } 
 
-  }
-  .lineTypescript {
-    width: 85%;
-  }
-  .lineJavascript {
-    width: 85%;
-  }
-  .lineRust {
-    width: 25%;
-  }
-  .skills p {
-    color: var(--c-white);
-    margin: 0;
-  }
-  .projects {
-    line-height: 1.6;
-    padding: 1rem 0.5rem;
-    height: 28ch;
-    border-radius: 0.5rem;
-    font-size: large;
-  }
   .screens-projects {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    h3 {
+      margin-bottom: 1rem;
+    }
   }
+
   .screens-projects p {
     color: var(--c-white);
     font-size: 0.75em;
     margin-top: 2rem;
     margin-bottom: 0;
+    align-self: center;
   }
 </style>
