--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,14 +1,53 @@
 <nav>
   <a class="link" href="http://thiago-pereira.dev" aria-label="Home">
     <div class="monogram">
-      <picture>
-        <img
-          src="/assets/thiago2.webp"
-          alt="thiago"
-          decoding="async"
-          loading="lazy"
-        />
-      </picture>
+      <svg width="44" height="47" viewBox="0 0 44 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="43.8099" height="46.2667" rx="6" fill="#050505"/>
+        <g filter="url(#filter0_d_2318_10)">
+        <path d="M5.5 17.5L13.5106 13.6831" stroke="#FFFFF4" stroke-width="3"/>
+        </g>
+        <g filter="url(#filter1_d_2318_10)">
+        <path d="M5.5 7.5L14.1256 12.8123" stroke="#FFFFF4" stroke-width="3"/>
+        </g>
+        <g filter="url(#filter2_d_2318_10)">
+        <line x1="16" y1="20.5" x2="26.7906" y2="20.5" stroke="#FFFFF4" stroke-width="3"/>
+        </g>
+        <defs>
+        <filter id="filter0_d_2318_10" x="0.915268" y="12.2941" width="17.1801" height="14.595" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+        <feOffset dy="4"/>
+        <feGaussianBlur stdDeviation="2"/>
+        <feComposite in2="hardAlpha" operator="out"/>
+        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
+        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
+        </filter>
+        <filter id="filter1_d_2318_10" x="0.774139" y="6.17468" width="18.0773" height="15.9629" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+        <feOffset dy="4"/>
+        <feGaussianBlur stdDeviation="2"/>
+        <feComposite in2="hardAlpha" operator="out"/>
+        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
+        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
+        </filter>
+        <filter id="filter2_d_2318_10" x="12" y="19" width="18.7906" height="11" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+        <feOffset dy="4"/>
+        <feGaussianBlur stdDeviation="2"/>
+        <feComposite in2="hardAlpha" operator="out"/>
+        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2318_10"/>
+        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2318_10" result="shape"/>
+        </filter>
+        </defs>
+        </svg>
+        
+        
+        
     </div>
 
     <div class="socials">
@@ -101,7 +140,7 @@
         >
       </a>
       <a
-        href="mailto:tp@thiago-pereira.dev"
+        href="mailto:pereirathi886@gmail.com"
         target="blank"
         rel="noopener noreferrer"
         aria-label="Email"
@@ -179,7 +218,7 @@
 
   .socials {
     display: flex;
-    gap: 1em;
+    gap: 1.5em;
     margin-left: auto;
   }
 
