--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,7 +124,7 @@ import Footer from "../components/Footer.astro";
     font-size: var(--f-u3);
     font-weight: 500;
     text-align: left;
-    margin: 1.5rem 0;
+    margin: 2rem 0;
   }
 
 
@@ -135,8 +135,8 @@ import Footer from "../components/Footer.astro";
     color: var(--c-white);
     font-size: 1.25rem;
     line-height: 1.6;
-    padding: 1rem 0.5rem;
-    height: 24ch;
+    padding: 1rem 1rem;
+    height: 20ch;
   }
   @media (max-width: 600px) {
     .grid {
@@ -159,6 +159,8 @@ import Footer from "../components/Footer.astro";
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    margin: 2rem 0;
     h3 {
       margin-bottom: 1rem;
     }
@@ -166,7 +168,8 @@ import Footer from "../components/Footer.astro";
 
   .screens-projects p {
     color: var(--c-white);
-    font-size: 0.75em;
+    font-size: 0.80em;
+    height: auto;
     margin-top: 2rem;
     margin-bottom: 0;
     align-self: center;
