--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,23 +136,41 @@ import Footer from "../components/Footer.astro";
     font-size: 1.25rem;
     line-height: 1.6;
     padding: 1rem 1rem;
-    height: 20ch;
+    height: auto;
   }
   @media (max-width: 600px) {
+    .container {
+      margin: 0 0.5rem;
+      span {
+        font-size: var(--f-u2);
+      }
+    }
+    h1 {
+      font-size: var(--f-u4);
+      line-height: 60px;
+      margin-top: 1rem;;
+    }
+    h2 {
+      font-size: var(--f-u2);
+    }
     .grid {
       grid-template-columns: 1fr 1fr;
     }
     .details{
+      flex-direction: column;
       img {
-        border-radius: 100vmax;
         height: 370px;
         width: min(250px, 100%);
         box-shadow: 0 0 0 0.2px var(--c-black);
-        object-fit: cover;
-        object-position: center;
-        margin: auto;
       }
     }
+    .screens-projects {
+      img {
+
+        width: min(200px, 100%);
+        box-shadow: 0 0 0 0.2px var(--c-black);
+      }
+  }
   } 
 
   .screens-projects {
