--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -73,9 +73,8 @@ const { title } = Astro.props;
       body {
         margin: auto;
         max-width: 130ch;
-        padding: 1rem;
+        padding: 0 1rem;
       }
-    
     </style>
   </body>
 </html>
