--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,6 +35,7 @@ const { title } = Astro.props;
     <style is:global>
       :root {
         /* Colors */
+        --hue: 235;
         --c-black: #010101;
         --c-white: #fff;
         --c-lgray: #fafaf2;
@@ -55,7 +56,22 @@ const { title } = Astro.props;
           rgb(var(--accent)),
           rgb(32, 9, 126) 40%,
           white 30%
-        );
+          );
+
+        --shadow-strength: .25;
+        --shadow-saturation: 20%;
+        --shadow-lightness: 40%;
+        --shadow: var(--hue) var(--shadow-saturation) var(--shadow-lightness);
+        --shadow-lg:
+          0.2px 0.5px 0.6px hsl(var(--shadow) / var(--shadow-strength)),
+          1.1px 2.7px 3.3px -0.4px hsl(var(--shadow) / var(--shadow-strength)),
+          2.1px 5px 6.1px -0.7px hsl(var(--shadow) / var(--shadow-strength)),
+          3.5px 8.3px 10.1px -1.1px hsl(var(--shadow) / var(--shadow-strength)),
+          5.6px 13.2px 16.1px -1.4px hsl(var(--shadow) / var(--shadow-strength)),
+          8.7px 20.7px 25.3px -1.8px hsl(var(--shadow) / var(--shadow-strength)),
+          13.3px 31.4px 38.4px -2.1px hsl(var(--shadow) / var(--shadow-strength)),
+          19.6px 46.3px 56.6px -2.5px hsl(var(--shadow) / var(--shadow-strength));
+
       }
       p,
       h1,
